--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: 1.0.6
+  flutter_riverpod: 2.4.9
+  go_router: 12.1.3
+  dio: 5.4.0
+  shared_preferences: 2.2.2
+  json_annotation: 4.8.1
+  intl: 0.19.0
+  uuid: 4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +51,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^6.0.0
+  flutter_lints: 3.0.0
+  build_runner: 2.4.7
+  json_serializable: 6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
