--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   json_annotation: ^4.9.0
   intl: ^0.20.2
   uuid: ^4.5.2
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
