--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.20.2
   uuid: ^4.5.2
   image_picker: ^1.2.1
+  google_mlkit_image_labeling: ^0.12.0
 
 dev_dependencies:
   flutter_test:
